--- a/androidApp/src/main/res/values/themes.xml
+++ b/androidApp/src/main/res/values/themes.xml
@@ -14,8 +14,8 @@
         <item name="android:navigationBarColor">@color/background_dark</item>
         <item name="android:windowLightStatusBar">false</item>
         
-        <!-- Window -->
-        <item name="android:windowBackground">@color/background_dark</item>
+        <!-- Window - Use splash background to prevent any flash of wrong icon -->
+        <item name="android:windowBackground">@drawable/splash_background</item>
         <item name="android:windowDrawsSystemBarBackgrounds">true</item>
     </style>
     
