--- a/webApp/src/jsMain/resources/threat.css
+++ b/webApp/src/jsMain/resources/threat.css
@@ -503,17 +503,9 @@ html {
     }
 }
 
+/* Breadcrumbs are hidden as per design requirements */
 .breadcrumbs {
-    display: none;
-    align-items: center;
-    gap: var(--space-2);
-    font-size: 0.875rem;
-}
-
-@media (min-width: 640px) {
-    .breadcrumbs {
-        display: flex;
-    }
+    display: none !important;
 }
 
 .breadcrumbs span {
